methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: ';' expected but 'else' found.
                                     };else {gauche()}}
                                       ^